--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,30 @@
 services:
+  # Cloudflare Tunnel for secure external access
+  cloudflared:
+    image: cloudflare/cloudflared:latest
+    container_name: svmesh-tunnel
+    command: tunnel --no-autoupdate run --token ${CLOUDFLARE_TUNNEL_TOKEN}
+    environment:
+      - TUNNEL_TOKEN=${CLOUDFLARE_TUNNEL_TOKEN}
+    depends_on:
+      - nginx
+    restart: unless-stopped
+    security_opt:
+      - no-new-privileges:true
+    cap_drop:
+      - ALL
+    networks:
+      - default
+
   # Reverse proxy for SSL termination and security
   nginx:
     image: nginx:alpine
     container_name: svmesh-nginx
-    ports:
-      - "80:80"
-      - "443:443"
+    # No external ports - accessed via Cloudflare Tunnel
+    expose:
+      - "80"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./ssl:/etc/ssl/private:ro
+      - ./nginx.conf.tunnel:/etc/nginx/nginx.conf:ro
       - /var/log/nginx:/var/log/nginx
     depends_on:
       - svmesh-app
