--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,82 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# Dependencies
 /node_modules
 /.pnp
 .pnp.js
+**/node_modules
 
-# testing
+# Testing
 /coverage
 
-# production
+# Production builds
 /build
+/dist
+**/dist
 
-# misc
-.DS_Store
+# Environment variables
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+*.log
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDE and editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Docker
+docker-compose.override.yml
+
+# SSL certificates (keep these secure and out of repo)
+ssl/
+*.pem
+*.key
+*.crt
+
+# Temporary nginx config files
+nginx.conf.tunnel
+
+# Backup files
+*.backup
+*.bak
+
+# .NET specific
+bin/
+obj/
+*.user
+*.suo
+*.cache
+.vs/
+
+# Mac specific
+.AppleDouble
+.LSOverride
 
 npm-debug.log*
 yarn-debug.log*
