Remove Cloudflare tunnel support

--- a/docker-compose.cloudflare-backup.yml
+++ b/docker-compose.cloudflare-backup.yml
@@ -1,12 +1,30 @@
 services:
+  # Cloudflare Tunnel for secure external access
+  cloudflared:
+    image: cloudflare/cloudflared:latest
+    container_name: svmesh-tunnel
+    command: tunnel --no-autoupdate run --token ${CLOUDFLARE_TUNNEL_TOKEN}
+    environment:
+      - TUNNEL_TOKEN=${CLOUDFLARE_TUNNEL_TOKEN}
+    depends_on:
+      - nginx
+    restart: unless-stopped
+    security_opt:
+      - no-new-privileges:true
+    cap_drop:
+      - ALL
+    networks:
+      - default
+
   # Reverse proxy for SSL termination and security
   nginx:
     image: nginx:alpine
     container_name: svmesh-nginx
-    ports:
-      - "${NGINX_PORT:-8081}:80" # Expose nginx on configurable port
+    # No external ports - accessed via Cloudflare Tunnel
+    expose:
+      - "80"
     volumes:
-      - ./nginx.conf.traefik:/etc/nginx/nginx.conf:ro
+      - ./nginx.conf.tunnel:/etc/nginx/nginx.conf:ro
       - /var/log/nginx:/var/log/nginx
     depends_on:
       - svmesh-app
@@ -19,8 +37,6 @@ services:
       - CHOWN
       - SETGID
       - SETUID
-    networks:
-      - internal
 
   # Main SVMesh application
   svmesh-app:
@@ -46,8 +62,6 @@ services:
     tmpfs:
       - /tmp
       - /var/tmp
-    networks:
-      - internal
     healthcheck:
       test:
         [
@@ -68,7 +82,6 @@ volumes:
     driver: local
 
 networks:
-  # Internal network for app communication
-  internal:
-    name: svmesh-internal
+  default:
+    name: svmesh-network
     driver: bridge
